@@ -1,3 +1,13 @@
+March 27, 2023
+--------------
+
+Modifications for AOO:
+
+    - Use <stdint.h> for integer types to make the code work on non-Intel platforms.
+
+    - Fix undefined behavior when serializing empty blobs
+
+
 April 9, 2013
 -------------
 
